les pages actus et la page présentation terminer

--- a/presentation.html
+++ b/presentation.html
@@ -111,7 +111,7 @@
             </p>
         </div>
 
-        <div>
+        <div class="liens-utiles">
             <h3>Liens utiles</h3>
             <p><a href="index.html">Accueil</a></p>
             <p><a href="presentation.html">Présentation</a></p>
