--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=keyboard_arrow_down" />
     <script src="https://kit.fontawesome.com/01017a31ec.js" crossorigin="anonymous"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -42,31 +43,37 @@
             </ul>
         </nav>
 
+        <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
+
         <div class="bouttons">
             <button class="btn btn1">ADHÉRER</button>
             <button class="btn">DONNER</button>
         </div>
     </header>
 
-    <section class="home">
-        <div class="texte-left">
-            <h1>Bienvenue sur le<br>site des JDE de l'ADES !</h1>
-            <p>Elles se sont déroulées du .. au .. .... 20.. à ........,<br>Lorem ipsum dolor sit amet consectetur.
-                en actes !</p>
+    <section class="home-section">
+        <!-- Partie gauche -->
+        <div class="home-left">
+            <h1>Bienvenue sur le site des JD de l'ADES !</h1>
+            <p>Elles se sont déroulées du 21 au 23 août 2025 à Strasbourg, capitale européenne... et vitrine de
+                l’écologie en actes !</p>
+            <button class="btn">PASSER À L'ACTION</button>
         </div>
-        <div class="bouttons-home">
-            <button class="btn-2">
-                PASSER À L'ACTION
-                <img src="images/logo-ades1.ico" alt="">
-            </button>
+
+        <!-- Partie droite -->
+        <div class="home-right">
+            <img src="images/JDE-ades.jpeg" alt="JDE">
+            <div class="overlay2"></div>
         </div>
     </section>
+
+
     <section class="actualite" id="actualites">
         <div class="title">
             <h2>ACTUALITÉS</h2>
         </div>
 
-        <a href="#">
+        <a href="pages-actu/actu1.html">
             <div class="grid-actualite">
                 <div class="box-actualite">
                     <img src="images/img-salla.jpeg" alt="">
@@ -79,7 +86,7 @@
         </a>
 
 
-        <a href="#">
+        <a href="pages-actu/actu2.html">
 
             <div class="box-actualite">
                 <img src="images/img-salla.jpeg" alt="">
@@ -95,7 +102,7 @@
         </a>
 
 
-        <a href="#">
+        <a href="pages-actu/actu3.html">
             <div class="box-actualite">
                 <img src="images/img-salla.jpeg" alt="">
                 <div class="liens">
@@ -141,7 +148,7 @@
             </p>
         </div>
 
-        <div>
+        <div class="liens-utiles">
             <h3>Liens utiles</h3>
             <p><a href="#">Accueil</a></p>
             <p><a href="presentation.html">Présentation</a></p>
@@ -156,13 +163,13 @@
         </div>
 
         <div>
-            <h3>Suivez-nous</h3>
-            <div class="socials-icons">
+            <h3 class="sv-nous">Suivez-nous</h3>
+            <div class="buttons">
                 <a href="https://www.facebook.com/p/Alliance-Des-Ecologistes-du-S%C3%A9n%C3%A9gal-100068978242811/"
-                    target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="https://www.ades.sn/" target="_blank"><img src="images/logo-ades1.ico" alt=""></a>
-                <a href="https://linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    target="_blank" class="btn">FACEBOOK</a>
+                <a href="https://twitter.com" target="_blank" class="btn">X</a>
+                <a href="https://www.ades.sn/" target="_blank" class="btn">ADES</a>
+                <a href="https://www.ades.sn/" target="_blank" class="btn">Linkedin</a>
             </div>
         </div>
 
