Mise à jour du site (ajout du javaScript, des pages infos, programme, script.js et data.js)

--- a/presentation.html
+++ b/presentation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -24,18 +24,18 @@
                 <li>
                     <a href="#">Programme</a>
                     <ul class="submenu">
-                        <li><a href="#">Jour 1</a></li>
-                        <li><a href="#">Jour 2</a></li>
-                        <li><a href="#">Version Planning</a></li>
+                        <li><a href="programme.html?id=jour1"">Jour 1</a></li>
+                        <li><a href="programme.html?id=jour2">Jour 2</a></li>
+                        <li><a href="programme.html?id=planning">Version Planning</a></li>
                     </ul>
                 </li>
                 <span class="material-symbols-outlined">keyboard_arrow_down</span>
                 <li>
                     <a href="#">Information pratiques</a>
                     <ul class="submenu">
-                        <li><a href="#">Guide des JDE</a></li>
-                        <li><a href="#">Tous les services</a></li>
-                        <li><a href="#">Partenaires</a></li>
+                        <li><a href="infos.html?id=guide">Guide des JDE</a></li>
+                        <li><a href="infos.html?id=partenariat">Tous les services</a></li>
+                        <li><a href="infos.html?id=jde">Partenaires</a></li>
                     </ul>
                 </li>
                 <span class="material-symbols-outlined">keyboard_arrow_down</span>
