--- a/infos.html
+++ b/infos.html
@@ -4,20 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Journées d'été ADES</title>
+    <title>information pratique</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/ico" href="images/logo-ades1.ico">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=keyboard_arrow_down" />
     <script src="https://kit.fontawesome.com/01017a31ec.js" crossorigin="anonymous"></script>
-    <script src="scripts/data.js" defer></script>
-    <script src="scripts/script.js" defer></script>
 </head>
 
 <body>
     <header>
         <div class="logo-div">
-            <a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JOURNÉES D'ÉTÉ<br>DES ÉCOLOGISTES ADES</a>
+            <a href="index.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JOURNÉES D'ÉTÉ<br>DES ÉCOLOGISTES ADES</a>
         </div>
 
         <nav class="nav-links">
@@ -44,64 +42,15 @@
             </ul>
         </nav>
 
-        <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
-
         <div class="bouttons">
             <button class="btn btn1">ADHÉRER</button>
             <button class="btn">DONNER</button>
         </div>
     </header>
-
-    <section class="home-section">
-        <!-- Partie gauche -->
-        <div class="home-left">
-            <h1>Bienvenue sur le site des JD de l'ADES !</h1>
-            <p>Elles se sont déroulées du 21 au 23 août 2025 à Strasbourg, capitale européenne... et vitrine de
-                l’écologie en actes !</p>
-            <div class="slogan">
-                <span>Travail</span> &nbsp;  <span>Équité</span> &nbsp; <span>Transparence</span>
-            </div>
-        </div>
-
-        <!-- Partie droite -->
-        <div class="home-right">
-            <img src="images/JDE-ades.jpeg" alt="JDE">
-            <div class="overlay2"></div>
-        </div>
-    </section>
-
-
-
-    <!-- Section Actualités -->
-    <section class="actus-section">
-        <h2>Actualités</h2>
-        <div class="actus-container" id="actus-container">
-            <!-- Les actus vont être générées ici -->
-        </div>
-    </section>
-
-    <section class="info">
-        <div class="overlay"></div>
-        <div class="content">
-            <h1>RESTEZ INFORMÉ·ES,<br> SUIVEZ-NOUS !</h1>
-            <div class="buttons">
-                <a href="https://www.facebook.com/p/Alliance-Des-Ecologistes-du-S%C3%A9n%C3%A9gal-100068978242811/"
-                    target="_blank" class="btn">FACEBOOK</a>
-                <a href="https://twitter.com" target="_blank" class="btn">X</a>
-                <a href="https://www.ades.sn/" target="_blank" class="btn">ADES</a>
-            </div>
-            <!-- Formulaire Newsletter Brevo -->
-            <div class="newsletter">
-                <form action="https://YOUR_ACCOUNT.sibforms.com/serve/MUIE...XYZ" method="POST" target="_blank">
-                    <input type="text" name="FIRSTNAME" placeholder="Votre prénom" required>
-                    <input type="email" name="EMAIL" placeholder="Entrez votre email" required>
-                    <button type="submit">S'abonner</button>
-                </form>
-            </div>
-        </div>
-    </section>
-
-    <footer>
+    <main class="bg-infos">
+        <div class="infos-page" id="infos-page"></div>
+    </main>
+    <footer class="foot">
         <div>
             <h3>À propos</h3>
             <p>
@@ -112,9 +61,9 @@
 
         <div class="liens-utiles">
             <h3>Liens utiles</h3>
-            <p><a href="#">Accueil</a></p>
+            <p><a href="index.html">Accueil</a></p>
             <p><a href="presentation.html">Présentation</a></p>
-            <p><a href="#actualites">Actualités</a></p>
+            <p><a href="index.html#actualites">Actualités</a></p>
         </div>
 
         <div>
@@ -125,21 +74,39 @@
         </div>
 
         <div>
-            <h3 class="sv-nous">Suivez-nous</h3>
-            <div class="buttons">
+            <h3>Suivez-nous</h3>
+            <div class="socials-icons">
                 <a href="https://www.facebook.com/p/Alliance-Des-Ecologistes-du-S%C3%A9n%C3%A9gal-100068978242811/"
-                    target="_blank" class="btn">FACEBOOK</a>
-                <a href="https://twitter.com" target="_blank" class="btn">X</a>
-                <a href="https://www.ades.sn/" target="_blank" class="btn">ADES</a>
-                <a href="https://www.ades.sn/" target="_blank" class="btn">Linkedin</a>
+                    target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.ades.sn/" target="_blank"><img src="images/logo-ades1.ico" alt=""></a>
+                <a href="https://linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
 
-        <div class="footer-bottom">
+        <div class="foot-bottom">
             © 2025 Alliance des Écologistes du Sénégal - Tous droits réservés
         </div>
     </footer>
 
+    <script src="scripts/data.js"></script>
+    <script>
+        const params = new URLSearchParams(window.location.search);
+        const id = params.get("id");
+
+        const info = infos.find(e => e.id === id);
+        const container = document.getElementById("infos-page");
+
+        if (info) {
+            container.innerHTML = `
+        <h1>${info.titre}</h1>
+        ${info.contenu}
+        <a href="index.html">← Retour</a>
+      `;
+        } else {
+            container.innerHTML = "<p>Information introuvable.</p>";
+        }
+    </script>
 </body>
 
 </html>
