dernier modification sur le header et sur les pages

--- a/article.html
+++ b/article.html
@@ -14,9 +14,9 @@
 <body>
 
   <header>
-    <div class="logo-div">
-      <a href="index.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JOURNÉES D'ÉTÉ<br>DES ÉCOLOGISTES ADES</a>
-    </div>
+     <div class="logo-div">
+            <a href="index.html"><img src="images/logo_JD.jpeg" alt=""></a>
+        </div>
 
     <nav class="nav-links">
       <ul>
@@ -82,7 +82,7 @@
             <div class="buttons">
                 <a href="https://www.facebook.com/p/Alliance-Des-Ecologistes-du-S%C3%A9n%C3%A9gal-100068978242811/"
                     target="_blank" class="btn">FACEBOOK</a>
-                <a href="https://twitter.com" target="_blank" class="btn">X</a>
+                <a href="https://x.com/ades_senegal?s=11" target="_blank" class="btn">X</a>
                 <a href="https://www.ades.sn/" target="_blank" class="btn">ADES</a>
                 <a href="https://www.ades.sn/" target="_blank" class="btn">Linkedin</a>
             </div>
