--- a/index.html
+++ b/index.html
@@ -17,34 +17,35 @@
 <body>
     <header>
         <div class="logo-div">
-            <a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JOURNÉES D'ÉTÉ<br>DES ÉCOLOGISTES ADES</a>
+            <a href="#"><img src="images/logo_JD.jpeg" alt=""></a>
         </div>
+        <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
 
         <nav class="nav-links">
             <ul>
                 <li><a href="presentation.html" class="unique">Présentation</a></li>
                 <li>
-                    <a href="#">Programme</a>
+                    <a href="#" class="prog">Programme
+                        <span class="material-symbols-outlined">keyboard_arrow_down</span>
+                    </a>
                     <ul class="submenu">
                         <li><a href="programme.html?id=jour1">Jour 1</a></li>
                         <li><a href="programme.html?id=jour2">Jour 2</a></li>
                         <li><a href="programme.html?id=planning">Version Planning</a></li>
                     </ul>
                 </li>
-                <span class="material-symbols-outlined">keyboard_arrow_down</span>
                 <li>
-                    <a href="#">Information pratiques</a>
+                    <a href="#" class="inf-pra">Information pratiques
+                        <span class="material-symbols-outlined">keyboard_arrow_down</span>
+                    </a>
                     <ul class="submenu">
                         <li><a href="infos.html?id=guide">Guide des JDE</a></li>
                         <li><a href="infos.html?id=partenariat">Tous les services</a></li>
                         <li><a href="infos.html?id=jde">Partenaires</a></li>
                     </ul>
                 </li>
-                <span class="material-symbols-outlined">keyboard_arrow_down</span>
             </ul>
         </nav>
-
-        <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
 
         <div class="bouttons">
             <button class="btn btn1">ADHÉRER</button>
@@ -65,7 +66,7 @@
 
         <!-- Partie droite -->
         <div class="home-right">
-            <img src="images/JDE-ades.jpeg" alt="JDE">
+            <img src="images/img-salla.jpeg" alt="JDE">
             <div class="overlay2"></div>
         </div>
     </section>
@@ -87,7 +88,7 @@
             <div class="buttons">
                 <a href="https://www.facebook.com/p/Alliance-Des-Ecologistes-du-S%C3%A9n%C3%A9gal-100068978242811/"
                     target="_blank" class="btn">FACEBOOK</a>
-                <a href="https://twitter.com" target="_blank" class="btn">X</a>
+                <a href="https://x.com/ades_senegal?s=11" target="_blank" class="btn">X</a>
                 <a href="https://www.ades.sn/" target="_blank" class="btn">ADES</a>
             </div>
             <!-- Formulaire Newsletter Brevo -->
@@ -129,7 +130,7 @@
             <div class="buttons">
                 <a href="https://www.facebook.com/p/Alliance-Des-Ecologistes-du-S%C3%A9n%C3%A9gal-100068978242811/"
                     target="_blank" class="btn">FACEBOOK</a>
-                <a href="https://twitter.com" target="_blank" class="btn">X</a>
+                <a href="https://x.com/ades_senegal?s=11" target="_blank" class="btn">X</a>
                 <a href="https://www.ades.sn/" target="_blank" class="btn">ADES</a>
                 <a href="https://www.ades.sn/" target="_blank" class="btn">Linkedin</a>
             </div>
