--- a/infos.html
+++ b/infos.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo-div">
-            <a href="index.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JOURNÉES D'ÉTÉ<br>DES ÉCOLOGISTES ADES</a>
+            <a href="index.html"><img src="images/logo_JD.jpeg" alt=""></a>
         </div>
 
         <nav class="nav-links">
@@ -78,7 +78,7 @@
             <div class="socials-icons">
                 <a href="https://www.facebook.com/p/Alliance-Des-Ecologistes-du-S%C3%A9n%C3%A9gal-100068978242811/"
                     target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://x.com/ades_senegal?s=11" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="https://www.ades.sn/" target="_blank"><img src="images/logo-ades1.ico" alt=""></a>
                 <a href="https://linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             </div>
